fix(tabs): fix gap

--- a/web-components/src/components/tabs/scss/tab.scss
+++ b/web-components/src/components/tabs/scss/tab.scss
@@ -8,7 +8,6 @@
 }
 
 :host([selected]) button {
-  border: 0;
   box-shadow: var(--tabs-default-active-bottom-border, $tab-active-border);
   border-radius: $tab-focus-border-radius $tab-focus-border-radius 0 0;
   color: var(--tabs-default-active, $lm-tabs-default-active-light);
@@ -25,7 +24,6 @@
 }
 
 :host([selected][vertical]) button {
-  border: 0;
   border-radius: 0 $tab-focus-border-radius $tab-focus-border-radius 0;
   box-shadow: var(--tabs-default-active-vertical-border, $tab-active-vertical-border);
 
@@ -38,7 +36,8 @@
   background-color: var(--tabs-default-focus-bg, $lm-tabs-default-focus-bg-light);
 
   button {
-    border: $tab-main-focus-border !important;
+    outline: $tab-main-focus-border !important;
+    outline-offset: rem-calc(-2);
     box-shadow: var(--tabs-default-focus-shadow, $lm-tabs-default-focus-shadow-light) !important;
   }
 }
@@ -112,7 +111,7 @@ md-icon {
 
 button {
   background: $tab-none-bg;
-  border: $tab-border;
+  border: none;
   border-radius: $tab-focus-border-radius;
   color: var(--tabs-default-text-color, $lm-tabs-default-text-color-light);
   display: block;
@@ -180,7 +179,6 @@ button {
   }
 
   :host([selected]) button {
-    border: 0;
     box-shadow: inset 0 -3px 0 0 Highlight;
     border-radius: $tab-focus-border-radius $tab-focus-border-radius 0 0;
     color: Highlight;
